--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <title> Новый год</title>
    <link rel="stylesheet" type="text/css" 
           href="new.css">
+		  <meta charset="utf-8">
    </head>
    <body>
    <div id="container"></div>
