--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html= "RU">
  <html>
    <head>
-   <title> Новый год</title>
+   <title> РќРѕРІС‹Р№ РіРѕРґ</title>
    <link rel="stylesheet" type="text/css" 
           href="new.css">
 		  <meta charset="utf-8">
@@ -12,19 +12,19 @@
      
 <table border="0" cellpadding="2" width="100%">
      <td><img src="00.jpg" align="center"></td>
-	 <td align="center"> <h3><i><p><b>Поздравляю С Наступающим 2019 ГОДОМ!!!!</b></p></h3>
+	 <td align="center"> <h3><i><p><b>РџРѕР·РґСЂР°РІР»СЏСЋ РЎ РќР°СЃС‚СѓРїР°СЋС‰РёРј 2019 Р“РћР”РћРњ!!!!</b></p></h3>
 	 
-	 <p>И хочется всем пожелать, 
-	 чтобы в наступающем году с нами произошло то самое чудо, 
-	 о котором мы все так мечтаем.</p>
-	 <p>Хоть у каждого оно свое, 
-	 но оно обязательно самое необходимое и самое важное. </p>
+	 <p>Р С…РѕС‡РµС‚СЃСЏ РІСЃРµРј РїРѕР¶РµР»Р°С‚СЊ, 
+	 С‡С‚РѕР±С‹ РІ РЅР°СЃС‚СѓРїР°СЋС‰РµРј РіРѕРґСѓ СЃ РЅР°РјРё РїСЂРѕРёР·РѕС€Р»Рѕ С‚Рѕ СЃР°РјРѕРµ С‡СѓРґРѕ, 
+	 Рѕ РєРѕС‚РѕСЂРѕРј РјС‹ РІСЃРµ С‚Р°Рє РјРµС‡С‚Р°РµРј.</p>
+	 <p>РҐРѕС‚СЊ Сѓ РєР°Р¶РґРѕРіРѕ РѕРЅРѕ СЃРІРѕРµ, 
+	 РЅРѕ РѕРЅРѕ РѕР±СЏР·Р°С‚РµР»СЊРЅРѕ СЃР°РјРѕРµ РЅРµРѕР±С…РѕРґРёРјРѕРµ Рё СЃР°РјРѕРµ РІР°Р¶РЅРѕРµ. </p>
 	 
-	<p> Желаю, чтобы все мы были живы и здоровы, чтобы занимались тем, что приносит нам удовольствие.</p>
+	<p> Р–РµР»Р°СЋ, С‡С‚РѕР±С‹ РІСЃРµ РјС‹ Р±С‹Р»Рё Р¶РёРІС‹ Рё Р·РґРѕСЂРѕРІС‹, С‡С‚РѕР±С‹ Р·Р°РЅРёРјР°Р»РёСЃСЊ С‚РµРј, С‡С‚Рѕ РїСЂРёРЅРѕСЃРёС‚ РЅР°Рј СѓРґРѕРІРѕР»СЊСЃС‚РІРёРµ.</p>
 	 
-	 <p>Желаю достигать новых вершин и самореализовываться.</p> 
+	 <p>Р–РµР»Р°СЋ РґРѕСЃС‚РёРіР°С‚СЊ РЅРѕРІС‹С… РІРµСЂС€РёРЅ Рё СЃР°РјРѕСЂРµР°Р»РёР·РѕРІС‹РІР°С‚СЊСЃСЏ.</p> 
 	 
-	 <p>А еще пожелать хочу побольше радостных моментов, которые перейдут в приятные воспоминания, и встреч с преданными друзьями и любимыми домочадцами.</p></i>
+	 <p>Рђ РµС‰Рµ РїРѕР¶РµР»Р°С‚СЊ С…РѕС‡Сѓ РїРѕР±РѕР»СЊС€Рµ СЂР°РґРѕСЃС‚РЅС‹С… РјРѕРјРµРЅС‚РѕРІ, РєРѕС‚РѕСЂС‹Рµ РїРµСЂРµР№РґСѓС‚ РІ РїСЂРёСЏС‚РЅС‹Рµ РІРѕСЃРїРѕРјРёРЅР°РЅРёСЏ, Рё РІСЃС‚СЂРµС‡ СЃ РїСЂРµРґР°РЅРЅС‹РјРё РґСЂСѓР·СЊСЏРјРё Рё Р»СЋР±РёРјС‹РјРё РґРѕРјРѕС‡Р°РґС†Р°РјРё.</p></i>
 </td>
     </tr>
 </table>
